# Orange-HRM

./: .env.example  .gitignore  .trufflehog_exclude_globs.txt  LICENSE  README.md  pyproject.toml  pytest.ini
.github/: example.yml  publish-report.yml
.github/scripts/: update-pr-comment.js
.github/workflows/: ci-feature.yml  ci-pr-checks.yml  ci-security-scan.yml  pr-checks.yml  security-scan.yml
docs/: CI_CD_GUIDE.md  CONTRIBUTING.md  SETUP.md  TROUBLESHOOTING.md  USAGE.md
docs/ADR/: 0001-use-pydantic-for-secrets.md  0002-json-configs-for-non-secrets.md
docs/DIAGRAMS/: precedence.mmd  pydantic_priority_order.mmd
src/: __init__.py
src/orange_hrm/: __init__.py
src/orange_hrm/config/: __init__.py  dev.json  dotenv_config.py  prod.json  staging.json
src/orange_hrm/constants/: __init__.py  json_env_config.py
src/orange_hrm/pages/: __init__.py  base.py  dashboard.py  login.py
tests/: __init__.py  conftest.py  test_login.py
