[project]
name = "orange-hrm"
version = "0.1.0"
description = "Enterprise-grade test automation framework for Orange HRM web application testing, built with Python, Selenium, and modern configuration management practices."
readme = "README.md"
authors = [
    { name = "Bijo", email = "next.wavecode@gmail.com" }
]

requires-python = ">=3.13"
dependencies = [
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.1",
    "selenium>=4.35.0",
]


[tool.bandit]
exclude_dirs = ["./.venv", "./.env", "./.git", "./__pycache__", "./.github", "./reports", "./.vscode", "./docs", "./.coverage", "./.env.example", "./.gitignore", "./pyproject.toml", "./README.md", "./CHANGELOG.md", "./LICENSE", "./.python-version", "./.mypy_cache", "./.pytest_cache", "./.drivers", "./.allure-reports"]
skips = ["B101"]


[tool.uv]
package = true


[tool.ruff.lint]
select = ["ALL"]
# Explicitly ignore the conflicting codes so Ruff won't auto-disable things
extend-ignore = ["D203", "D213", "S101", "COM812"]

[tool.ruff]
line-length = 120
target-version = "py313"


[build-system]
requires = ["uv_build>=0.8.14,<0.9.0"]
build-backend = "uv_build"


[dependency-groups]
dev = [
    "bandit[toml]>=1.8.6",
    "pip-audit>=2.9.0",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.12",
]
